[package]
name = "catboxrs"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/urioTV/catboxrs"
repository = "https://github.com/urioTV/catboxrs"
license = "MIT/Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

keywords = [
         "catbox",
         "api",
         "catboxrs"
]

[lib]
name = "catboxrs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
